--- a/tracker/templates/tracker/index.html
+++ b/tracker/templates/tracker/index.html
@@ -5,11 +5,12 @@
     <title>Gnome Tracker</title>
 </head>
 <body>
-<p>Hello!</p>
+<h1>Welcome to Gnome Defender!</h1>
 {% if latest_data_list %}
+    <h3>Data List:</h3>
     <ul>
-        {% for dataset in latest_date_list %}
-            <li><a href="/tracker/{{ dataset.id }}/">{{ dataset.time }}</a></li>
+        {% for dataset in latest_data_list %}
+            <li><a href="{% url 'tracker:detail' dataset.id %}">{{ dataset.time }}</a></li>
         {% endfor %}
     </ul>
 {% else %}
