Templates coming along

--- a/tracker/templates/tracker/detail.html
+++ b/tracker/templates/tracker/detail.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 <head>
     <meta charset="UTF-8">
-    <title>Gnome Defender</title>
+    <title>Gnome Tracker</title>
     <link href="{% static 'tracker/main.css' %}" rel="stylesheet" type="text/css" />
 </head>
 <body>
