--- a/tracker/templates/tracker/index.html
+++ b/tracker/templates/tracker/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load staticfiles %}
 <head>
     <meta charset="UTF-8">
     <title>Gnome Tracker</title>
+    <link href="{% static 'tracker/main.css' %}" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <h1>Welcome to Gnome Defender!</h1>
