--- a/tracker/templates/tracker/detail.html
+++ b/tracker/templates/tracker/detail.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Gnome Tracker</title>
-    <link href="{% static 'tracker/main.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'tracker/stylesheets/main.css' %}" rel="stylesheet" type="text/css" />
 </head>
 <body>
+
 
 <h1>{{ dataset.date }} {{ dataset.time }}</h1>
 <h2>{{ dataset.user.first_name }}</h2>
@@ -34,7 +35,6 @@
         <td>{{ dataset.nutrient_level }}</td>
     </tr>
 </table>
-
 
 </body>
 </html>
