--- a/tracker/templates/tracker/login.html
+++ b/tracker/templates/tracker/login.html
@@ -20,7 +20,7 @@
         {% csrf_token %}
         <label for="username">Username:</label><input type="text" id="username" name="username" value="" size="50" /><br />
         <label for="password">Password:</label><input type="password" id="password" name="password" value="" size="50"><br />
-        <input type="submit" value="Login" />
+        <button name="submit" type="submit">Submit</button>
     </form>
 
 </article>
