--- a/tracker/templates/tracker/index.html
+++ b/tracker/templates/tracker/index.html
@@ -30,15 +30,15 @@
         {% endif %}
     </section>
         <form action="{% url 'tracker:add_gnome' %}" method="get">
-            <input type="submit" value="Register a new Gnome" />
+            <button name="submit" type="submit">Register a new Gnome</button>
         </form>
     {% endif %}
 
 
 {% if user.is_authenticated %}
-    <a href="{% url 'tracker:logout' %}">Logout</a>
+    <a class="button" href="{% url 'tracker:logout' %}">Logout</a>
 {% else %}
-    <a href="{% url 'tracker:login' %}">Login</a>
+    <a class="button" href="{% url 'tracker:login' %}">Login</a>
 {% endif %}
 
 
