--- a/tracker/templates/tracker/data_index.html
+++ b/tracker/templates/tracker/data_index.html
@@ -33,6 +33,8 @@
             {% if data_index %}
                 <h3>Today: {% now "SHORT_DATE_FORMAT" %}</h3>
 
+                <h1>{{ gnomes }}</h1>
+
                 <table class="table table-bordered table-condensed table-hover">
                     <thead>
                     <tr>
@@ -45,7 +47,7 @@
                     </tr>
                     </thead>
 
-                    {% for dataset in latest_data_list %}
+                    {% for dataset in data_index.data %}
                         <tr class="clickable-row" data-href="{% url 'tracker:detail' dataset.id %}">
                             <td>{{ dataset.time }}</td>
                             <td>{{ dataset.temperature }}</td>
