Working on charting

--- a/tracker/templates/tracker/data_index.html
+++ b/tracker/templates/tracker/data_index.html
@@ -74,6 +74,11 @@
                         {% endif %}
                     {% endfor %}
                 </table>
+                <div>
+                    {{ chart }}
+                </div>
+
+
             {% else %}
                 <p>No transactions are available</p>
             {% endif %}
